Updated, three step fashion.

--- a/notebooks/network_usage.ipynb
+++ b/notebooks/network_usage.ipynb
@@ -18,14 +18,16 @@
     "\n",
     "It also shows how to train not only the top part of the model (aka the new layers stacked to fit our problem) but also some other layers of the pretrained model. This is something that we really want to do since the features extracted by the pretrained net at the middle last part potentially need to be finetuned.\n",
     "\n",
+    "https://blog.keras.io/building-powerful-image-classification-models-using-very-little-data.html\n",
+    "\n",
     "I would say not to touch the first 15% of layers of the pretrained models, since the features that they extract are low level and hence are still useful in our domain. This said, this notebook also shows how to use the pretrained weights just as initialization and then train the whole net.\n",
     "\n",
     "I think a good way to go is first train only the **top (last) layers**, then fine tune **~half the layers** and finally fine tune **all of them**. Of course we would keep track of the metrics and so we will be able to which is helpful and which is not.\n",
     "\n",
     "I recommend not to train using the notebook but a script so the process is independent on the browser. Also sometimes the verbosity of the training creates problems.\n",
     "\n",
-    "\n",
-    "https://blog.keras.io/building-powerful-image-classification-models-using-very-little-data.html"
+    "Also tensorboard is useful for monitoring the training http://stackoverflow.com/questions/37987839/how-can-i-run-tensorboard-on-a-remote-server\n",
+    "\n"
    ]
   },
   {
