Updated, three step fashion.

--- a/notebooks/network_usage.ipynb
+++ b/notebooks/network_usage.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# TRANSFER LEARNING FROM IMAGENET TO CERVIX"
    ]
@@ -55,22 +58,26 @@
     "import os\n",
     "sys.path.insert(0,os.path.join('..','scripts'))\n",
     "from network import Network, Temp\n",
-    "import keras\n",
-    "from keras.preprocessing.image import ImageDataGenerator\n",
     "from matplotlib import pyplot as plt\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## GENERATORS"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "The real generators have not been built yet, so in order to build the training module and test it I coded some **dummy** generators. In this case, the generators read directly from the raw images and apply some basic augmentation on the fly (not tested enough at all). I manually-randomly splitted a train and val set as well(put them in separate folders).\n",
     "We have to instantiate them now in order to assign them to the network later. We also sample a few images to get an idea of what will be fed to net.\n",
@@ -82,7 +89,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -209,7 +218,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## TOP LAYERS TRAINING"
    ]
@@ -228,7 +240,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -754,14 +768,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## FINE TUNING LAST 60% OF LAYERS"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Now we want to see what happens if we train also some of the layers of the pretrained model. We will use the output weights of the last step as initialization for the top new layers, although I don't really know to what extent that is important. Anyway if want to do it, we have to manually move the weights from the output folder to the input folder, then copy its filename and pass it when initialising the network (so they will be loaded)."
    ]
@@ -770,7 +790,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -1297,14 +1319,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## FINE TUNING ALL LAYERS"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Now we will do the same but will fine tune the whole network, taking the output weights of the last step as initialisation."
    ]
@@ -1313,7 +1341,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
