Added some text.

--- a/notebooks/network_usage.ipynb
+++ b/notebooks/network_usage.ipynb
@@ -240,7 +240,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Something is going wrong with the summary variable (see the annoying prints in the code cells). I havent been able to fix it nor the people talking about it here https://github.com/fchollet/keras/issues/5746"
+    "Something is going wrong with the summary variable (see the annoying prints in the code cells). I havent been able to fix it nor the people talking about it here https://github.com/fchollet/keras/issues/5746 , however I don't see those prints when training from a script"
    ]
   },
   {
