--- a/notebooks/cervix_segmentation.ipynb
+++ b/notebooks/cervix_segmentation.ipynb
@@ -54,6 +54,8 @@
     "print(check_output([\"ls\", \"../data/images/raw/\"]).decode(\"utf8\"))\n",
     "\n",
     "TRAIN_DATA = \"../data/images/raw/train\"\n",
+    "TEST_DATA = \"../data/images/raw/test\"\n",
+    "ADDITIONAL_DATA = \"../data/images/raw/train\"\n",
     "\n",
     "types = ['Type_1','Type_2','Type_3', 'Type_1_extra', 'Type_2_extra', 'Type_2_extra']\n",
     "type_ids = []\n",
@@ -381,9 +383,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
